# grandmasend

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/e2e/: Cargo.toml
crates/e2e/src/: chaos.rs  lib.rs
crates/e2e/tests/: abandon.rs  autoextract.rs  chaos_link.rs  code_policy.rs  folder_and_collision.rs  fresh_send.rs  kill_resume.rs  relay_forced.rs  sender_drop.rs
crates/grandmasend-cli/: Cargo.toml
crates/grandmasend-cli/src/: main.rs  update.rs
crates/grandmasend-core/: Cargo.toml
crates/grandmasend-core/src/: code.rs  events.rs  extract.rs  hello.rs  identity.rs  lib.rs  receiver.rs  sanitize.rs  sender.rs  state.rs
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh
