[workspace]
resolver = "2"
members = [
    "crates/grandmasend-core",
    "crates/grandmasend-cli",
    "crates/e2e",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edward3423/grandmasend"
rust-version = "1.91"

[workspace.dependencies]
grandmasend-core = { path = "crates/grandmasend-core" }
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
futures-buffered = "0.2"
indicatif = "0.18"
iroh = "1.0.0"
iroh-blobs = "0.103"
n0-future = "0.3"
num_cpus = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
data-encoding = "2"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
