[package]
name = "e2e"
description = "End-to-end tests and chaos tooling for grandmasend; never published"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
grandmasend-core.workspace = true
blake3.workspace = true
rand.workspace = true
tempfile = "3"
