[package]
name = "e2e"
description = "End-to-end tests and chaos tooling for grandmasend; never published"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
blake3.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
