[package]
name = "grandmasend-core"
description = "Core library for grandmasend: code-derived transfer identity, hello/ack protocol, send/receive engines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
fs4 = "1.1.0"
futures-buffered.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
iroh-mdns-address-lookup = "0.4.0"
n0-future.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
