[package]
name = "grandmasend-core"
description = "Core library for grandmasend: code-derived transfer identity, hello/ack protocol, send/receive engines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
fs4 = "1.1.0"
futures-buffered.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
iroh-mdns-address-lookup = "0.4.0"
n0-future.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sevenz-rust2 = { version = "0.21", features = ["aes256"] }
tokio.workspace = true
tracing.workspace = true
unrar = "0.5"
walkdir.workspace = true
zip = { version = "8", default-features = false, features = ["aes-crypto", "deflate", "bzip2"] }

[dev-dependencies]
tempfile = "3"
